# egui-task-manager

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md
examples/counter/: Cargo.toml
examples/counter/src/: main.rs
examples/full/: Cargo.toml
examples/full/src/: main.rs
src/: any.rs  channel.rs  collection.rs  lib.rs  manager.rs  spawning.rs  task.rs
src/execution/: caller.rs  executors.rs  handle.rs  handler.rs  mod.rs  progress.rs
