[package]
name = "egui-task-manager"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "examples/*",
]

[dependencies]
egui = {version = "0.28.0", optional = true}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"], default-features = false }

[features]
default = ["egui"]
egui = ["dep:egui"]
