[package]
name = "egui_task_manager"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Manage asynchronous easily"
repository = "https://github.com/Umatriz/egui-task-manager"
readme = "README.md"

[workspace]
resolver = "2"
members = [
    "examples/*",
]

[dependencies]
egui = {version = "0.28.0", optional = true}
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time"], default-features = false }

[features]
default = ["egui"]
egui = ["dep:egui"]
